# re-python-package-setuptools

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
package-name/: module.py
