[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "packagename"
description = "My package description"
authors = [
    {name = "name", email = "name@uu.nl"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
    # "numpy ~= 1.23.4",
    # "scikit-learn ~= 0.19.1",
]

[project.optional-dependencies]
lint = ["flake8"]
test = ["pytest", "mypy"]

[tool.setuptools]
packages = ["packagename"]

[tool.flake8]
max-line-length = 99
